# CHAL

./: .gitignore  CITATION.cff  CONTRIBUTING.md  INSTALLATION.md  README.md  env.example  pyproject.toml  run_debate.py  run_tests.py
.github/workflows/: ci.yml
docs/: CBS_reference.md  documentation.md
src/chal/: config.py  constants.py  log.py
src/chal/agents/: __init__.py  anthropic_agent.py  base.py  epistemic_personas.py  ethics_systems.py  factory.py  google_agent.py  logic_systems.py  ollama_agent.py  openai_agent.py  perplexity_agent.py  prompts.py  xai_agent.py
src/chal/beliefs/: __init__.py  belief_graph.py  graph_visualizer.py  io.py  patch.py  patches.py  schema.py  scoring.py
src/chal/cli/: __init__.py  api_keys.py  display.py  history.py  main.py  roadmap_review.py  runner.py  wizard.py
src/chal/configurations/: __init__.py  bloodsport_example.yaml  collaborative.yaml  default.yaml  ollama_test.yaml  perplexity_test.yaml  quick_test.yaml  xai_test.yaml
src/chal/convergence/: __init__.py  convergence_metrics.py  graph_analysis.py
src/chal/embeddings/: __init__.py  embedding_tracker.py  embedding_visualizer.py
src/chal/orchestrator/: __init__.py  adjudicator.py  argument_distiller.py  debate_controller.py  debate_driver.py  moderator.py  summarizer.py
tests/: __init__.py  conftest.py  test_adjudicator.py  test_agent_factory.py  test_agent_rate_limit.py  test_anthropic_agent.py  test_api_keys.py  test_base_agent.py  test_belief_graph.py  test_beliefs_io.py  test_cli.py  test_collaborative.py  test_config.py  test_convergence_metrics.py  test_custom_belief.py  test_debate_controller.py  test_debug_log_writer.py  test_display.py  test_embedding_tracker.py  test_embedding_visualizer.py  test_epistemic_personas.py  test_ethics_systems.py  test_google_agent.py  test_graph_analysis.py  test_history.py  test_io.py  test_key_pool.py  test_key_rotation.py  test_logic_systems.py  test_moderated_integration.py  test_moderator.py  test_ollama_agent.py  test_openai_agent.py  test_parallel_dispatcher.py  test_parallel_stages.py  test_patches.py  test_perplexity_agent.py  test_phase2_definitions.py  test_phase3_definitions.py  test_phase4_definitions.py  (+15 more)
tests/e2e/: test_complete_debate.py
tests/fixtures/: mock_openai_responses.json  test_adjudications.json  test_beliefs.json  test_challenges.txt  test_patches.json  test_rebuttals.txt
tests/integration/: test_belief_system.py  test_debate_workflow.py
tests/test_bloodsport/: __init__.py  test_bloodsport_config.py  test_bloodsport_integration.py  test_bloodsport_prompts.py
(+32 files in other folders)
