[project]
name = "chal"
version = "0.1.0"
description = "Council of HALs"
authors = [
    {name = "Griffin Dean Kent"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (==2.2.0)"
]
packages = [{ include = "chal", from = "src" }]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[project.scripts]
debate = "chal.cli:main"
